# archipel-monorepo

./: .env.example  .gitignore  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  ruff.toml  turbo.json
app/(chat)/: page.tsx
backend/archipel-ai/: README.md  pyproject.toml
backend/archipel-ai/archipel_ai/: main.py
backend/orchestrator/: esbuild.config.mjs  package.json  tsconfig.json
backend/orchestrator/src/: index.ts  langchain.ts
backend/orchestrator/src/orchestrator/: models.ts  orchestrator.ts  types.ts
backend/orchestrator/src/orchestrator/agents/planner/: planner.ts  types.ts
backend/orchestrator/src/plugins/: message.ts
base_workflow/: draw_graph.py  main.py  router.py  state.py  workflow.py
base_workflow/agents/: __init__.py  default_agent.py  orchestrator_agent-groq-beta.py  orchestrator_agent.py  planner_agent.py
base_workflow/data/: restaurants.json
base_workflow/nodes/: __init__.py  agent_node.py  benchmark_node.py  planner_node.py
base_workflow/tools/: __init__.py  ask_user.py  create_steps.py  execute_python.py  get_available_cities.py  get_restaurants_and_menu_in_city.py  order_pizza.py
base_workflow/utils/: __init__.py  create_agent.py
components/: chat-panel.tsx  empty-screen.tsx  prompt-form.tsx
components/stocks/: stocks.tsx
lib/: constants.ts
lib/chat/: actions.tsx
python/: LSTM_network.ipynb  oracle_repo.py
scripts/python/: LSTM_network copy 2.ipynb  LSTM_network.ipynb  LSTM_network.py  oracle_repo.py
