[tool.poetry]
name = "archipel-ai"
version = "0.1.0"
description = ""
authors = ["Unknown <example@example.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}

[tool.poetry.scripts]
serve = "archipel_ai.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
